@@ -1,3 +1,7 @@
+2008-12-04  T E Dixon  <https://sourceforge.net/users/dixonte/>
+
+	* main.c: Allow graceful exiting interval capture with SIGUSR2.
+
 2008-08-28  Marcus Meissner  <marcus@jet.franken.de>
 
 	* gphoto2/main.c: Allow to specify a camera by port.
